Mas cambios Guillem

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <%- include('../partials/head'); %>
 </head>
-<body>
-    <p> HOLA QUE TAL</p>
+<body class="container">
+
+<header>
+    <%- include('../partials/header'); %>
+</header>
+
+<main>
+    <div class="container">
+        <h1>Aquí va el contenido</h1>
+        <p>Más de lo mismo</p>
+    </div>
+</main>
+
+<footer>
+    <%- include('../partials/footer'); %>
+</footer>
+
 </body>
 </html>
