Cambios Sergio y Raul

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -11,8 +11,28 @@
 
 <main>
     <div class="container">
-        <h1>Aquí va el contenido</h1>
-        <p>Más de lo mismo</p>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand link-info" href="#">VinilosFull</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link link-info" aria-current="page" href="#">Novedades</a>
+                        <a class="nav-link link-info" href="#">Perfil</a>
+                        <a class="nav-link link-info" href="#">Vinilos</a>
+                        <a class="nav-link link-info" href="#">Carrito</a>
+                    </div>
+                </div>
+                <form class="d-flex align-items-end">
+                    <input class="form-control me-2" type="search" placeholder="¿Qué buscas?" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Buscar</button>
+                </form>
+            </div>
+        </nav>
     </div>
 </main>
 
