Push Guillem viernes mañana

--- a/views/pages/tienda.ejs
+++ b/views/pages/tienda.ejs
@@ -11,8 +11,10 @@
 
 <main>
     <div class="container">
-        <h1>Aquí va el contenido</h1>
-        <p>Más de lo mismo</p>
+        <form class="d-flex align-items-end">
+            <input class="form-control me-2" type="search" placeholder="¿Qué buscas?" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Buscar</button>
+        </form>
     </div>
 </main>
 
