--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,11 +1,23 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/">EJS Is Fun</a>
-    <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-            <a class="nav-link" href="/">Home</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/about">About</a>
-        </li>
-    </ul>
-</nav>
+<div class="container" >
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
+        <div class="container-fluid">
+            <a class="navbar-brand link-info" href="/">VinilosFull</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link link-info" aria-current="page" href="/tienda">Tienda</a>
+                    <a class="nav-link link-info" href="/registerLogin">Register / Login</a>
+                    <a class="nav-link link-info" href="/buscarHist">Ver mi historial</a>
+                    <a class="nav-link link-info" id="miPerfil" href="/perfil">Mi Perfil</a>
+                    <a class="nav-link link-info" id="logout" href="#">Logout</a>
+                    <a class="nav-link link-info" id="carrito" href="/carrito">Carrito</a>
+                </div>
+            </div>
+            
+        </div>
+    </nav>
+</div>
