--- a/views/pages/registerLogin.ejs
+++ b/views/pages/registerLogin.ejs
@@ -6,7 +6,7 @@
     <%- include('../partials/head'); %>
 </head>
 
-<body class="container">
+<body>
     <header>
         <%- include('../partials/header'); %>
     </header>
