Terminado login y register: falta mensajes para el usuario. Añadido el header y home

--- a/views/pages/registerLogin.ejs
+++ b/views/pages/registerLogin.ejs
@@ -53,8 +53,8 @@
                         <!--! *** Password ***-->
 
                         <div class="input-group input-group-sm mb-2">
-                            <label for="password1" class="input-group-text">Password</label>
-                            <input type="password" class="form-control" placeholder="Password" name="password1"
+                            <label for="password" class="input-group-text">Password</label>
+                            <input type="password" class="form-control" placeholder="Password" name="password"
                                 id="password1" required><br>
                         </div>
                         <span></span>
@@ -121,22 +121,22 @@
                 <!--! LOGIN -->
 
                 <div class="col-4 ">
-                    <form action="/loguear" method="POST" id="fmLogin"
+                    <form action="/login" method="POST" id="fmLogin"
                         class="border border-3 rounded-3 p-3 bg-primary">
                         <h5>LOGIN</h5>
                         <!--! *** Email ***-->
 
                         <div class="input-group input-group-sm mb-2">
-                            <label for="email" class="input-group-text">Email</label>
-                            <input type="text" class="form-control" placeholder="Ej: Ana@hotmail.com" name="email"
+                            <label for="email2" class="input-group-text">Email</label>
+                            <input type="text" class="form-control" placeholder="Ej: Ana@hotmail.com" name="email2"
                                 id="emailLogin" required><br>
                         </div>
                         <span></span>
                         <!--! *** Password ***-->
 
                         <div class="input-group input-group-sm mb-2">
-                            <label for="password1" class="input-group-text">Password</label>
-                            <input type="password" class="form-control" placeholder="Password" name="password"
+                            <label for="password3" class="input-group-text">Password</label>
+                            <input type="password" class="form-control" placeholder="Password" name="password3"
                                 id="passLogin" required><br>
                         </div>
                         <span></span>
