--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <%- include('../partials/head'); %>
+  
 </head>
 <body>
 
@@ -17,3 +18,6 @@
 <img src="https://raw.githubusercontent.com/lyvegama/imagenesVinilos/main/disenio/home/envios.png" width="700" height="600">
     </div>
 </main>
+<%info%>
+<script>
+</script>
