--- a/views/pages/producto.ejs
+++ b/views/pages/producto.ejs
@@ -11,15 +11,35 @@
 
 
 <main>
+<br>
+<br>
+<br>
+
     <div class="container">
-        <img src=" <%= infoProducto[0].imgUrl %>">
-        <h1> <%= infoProducto[0].titulo %> </h1> 
-        <p> <%= infoProducto[0].autor %></p>
-        <p> <%= infoProducto[0].genero %></p>
-        <p> <%= infoProducto[0].ano %></p>
-        <p> <%= infoProducto[0].numDisco %></p>
-        <p> <%= infoProducto[0].precio %></p>
+        <div class="row align-items-center justify-content-center ">
+            <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                <a href="/tienda" type="button" class="btn btn-dark">Volver a la tienda</a>
+            </div> 
+            <div class="col-md-auto mx-auto">
+                <img src=" <%= infoProducto[0].imgUrl %>" width="500" height="500">
+            </div>
+            <div class="col-md-auto  mx-auto">
+                <h1 class="display-2"><%= infoProducto[0].titulo %></h1> 
+                <h3>Autor: <%= infoProducto[0].autor %></h3>
+                <h3>Género: <%= infoProducto[0].genero %></h3>
+                <h3>Año de lanzamiento: <%= infoProducto[0].ano %></h3>
+                <h3>Numero de Discos: <%= infoProducto[0].numDisco %></h3>
+                <h3>Precio <%= infoProducto[0].precio %></h3>
+                <br>
+                <br>
+                <button href="/tienda" type="button" class="btn btn-dark">Añadir al carrito</button>
+            </div>
+        </div>
     </div>
+<br>
+<br>
+<br>
+   
 </main>
 
 
