--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
     <%- include('../partials/head'); %>
-  
+    <script>
+        let name = '<%-info%>'
+        localStorage.setItem("infoUser", name)
+    </script>
 </head>
 <body>
 
@@ -18,6 +21,5 @@
 <img src="https://raw.githubusercontent.com/lyvegama/imagenesVinilos/main/disenio/home/envios.png" width="700" height="600">
     </div>
 </main>
-<%info%>
 <script>
 </script>
