--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,7 @@
 <!-- barra de navegación -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
     <div class="container-fluid">
-        <a class="navbar-brand link-info" href="/">VinilosFull</a>
+        <a class="navbar-brand link-info" href="/home">VinilosFull</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
