--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <%- include('../partials/head'); %>
 </head>
+
 <body>
 
-<header>
-    <%- include('../partials/header'); %>
-</header>
+    <header>
+        <%- include('../partials/header'); %>
+    </header>
 
-<main>
-    <div class="container">
-        <!-- banner cabecera -->
-<img src="https://raw.githubusercontent.com/lyvegama/imagenesVinilos/main/disenio/home/quienessomos.png" width="700" height="600">
-<img src="https://raw.githubusercontent.com/lyvegama/imagenesVinilos/main/disenio/home/dondeestamos.png" width="700" height="600">
-<img src="https://raw.githubusercontent.com/lyvegama/imagenesVinilos/main/disenio/home/envios.png" width="700" height="600">
-    </div>
-</main>
+    <main>
+        <!-- imagenes de la home -->
+        <div class="container">
+
+            <img src="https://raw.githubusercontent.com/lyvegama/imagenesVinilos/main/disenio/home/quienessomos.png"
+                class="img-fluid" alt="...">
+            <img src="https://raw.githubusercontent.com/lyvegama/imagenesVinilos/main/disenio/home/dondeestamos.png"
+                class="img-fluid" alt="...">
+            <img src="https://raw.githubusercontent.com/lyvegama/imagenesVinilos/main/disenio/home/envios.png"
+                class="img-fluid" alt="...">
+        </div>
+    </main>
