--- a/views/pages/registerLogin.ejs
+++ b/views/pages/registerLogin.ejs
@@ -22,10 +22,10 @@
             <div class="row justify-content-evenly">
                 <div class="col-4 ">
                     <form action="/registro" method="POST" id="fmRegister"
-                        class=" border border-3 rounded-3 p-3 bg-primary">
+                    
 
                         <!--! ***REGISTER ****-->
-                        <h5>REGISTER</h5>
+                        <h5>Regístrate</h5>
 
                         <!--! *** Nombre ***-->
                         <div class="input-group input-group-sm mb-2">
@@ -121,9 +121,9 @@
                 <!--! LOGIN -->
 
                 <div class="col-4 ">
-                    <form action="/login" method="POST" id="fmLogin"
-                        class="border border-3 rounded-3 p-3 bg-primary">
-                        <h5>LOGIN</h5>
+                    <form action="/login" method="POST" id="fmLogin">
+                       
+                        <h5>Ya tengo cuenta</h5>
                         <!--! *** Email ***-->
 
                         <div class="input-group input-group-sm mb-2">
@@ -140,7 +140,7 @@
                                 id="passLogin" required><br>
                         </div>
                         <span></span>
-
+                        <!-- botón de loguear -->
                         <div class="mb-2">
                             <input class="btn btn-outline-secondary bg-dark" type="submit" id="btLoguear"
                                 value="Loguear">
