--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -5,7 +5,7 @@
     <%- include('../partials/head'); %>
     <script>
         let name = '<%-info%>'
-        localStorage.setItem("infoUser", name)
+        localStorage.setItem("user", name)
     </script>
 </head>
 
