--- a/views/pages/producto.ejs
+++ b/views/pages/producto.ejs
@@ -32,7 +32,7 @@
                 <h3>Precio <%= infoProducto[0].precio %></h3>
                 <br>
                 <br>
-                <input type="button" class="btn btn-dark" value="Añadir al carrito" onclick="addProducto('<%= infoProducto[0].id_vinilo %>')">
+                <input type="button" class="btn btn-outline-secondary bg-dark" value="Añadir al carrito" onclick="addProducto('<%= infoProducto[0].id_vinilo %>')">
             </div>
         </div>
     </div>
