--- a/views/pages/tienda.ejs
+++ b/views/pages/tienda.ejs
@@ -27,7 +27,7 @@
                         <div class="card" style="width: 18rem;">
                             <form action="/verProducto" method="POST">
                                 <input type="image"  class="card-img-top" src=" <%= infoVinilos[i].imgUrl %> " alt="Submit Form">
-                            <input type="hidden" name="id_vinilo" value="<%= infoVinilos[i].id_vinilo %>">
+                                <input type="hidden" name="id_vinilo" value="<%= infoVinilos[i].id_vinilo %>">
                             
                                 <div class="card-body">
                                     <h5 class="card-title">
@@ -36,9 +36,9 @@
                                     <p class="card-text">
                                         <%= infoVinilos[i].autor %>
                                         <br>
-                                        <%= infoVinilos[i].precio %>
+                                        <%= infoVinilos[i].precio %>,00 €
                                     </p>
-                                    <input type="button" class="btn btn-dark" value="Añadir al carrito" onclick="addProducto('<%= infoVinilos[i].id_vinilo %>')">
+                                    <input type="button" class="btn btn-outline-secondary bg-dark" value="Añadir al carrito" onclick="addProducto('<%= infoVinilos[i].id_vinilo %>')">
                                 </div>
                             </form>
                         </div>
@@ -66,7 +66,7 @@
                                         <br>
                                         <%= infoDiscosScrapeados[i].precio %>
                                     </p>
-                                    <a href=" <%= infoDiscosScrapeados[i].url %> " target=”_blank” class="btn btn-dark">Ver en la web</a>
+                                    <a href=" <%= infoDiscosScrapeados[i].url %> " target=”_blank” class="btn btn-outline-secondary bg-dark">Ver en la web</a>
                                 </div>
                             </div>
                         </div>
